--- a/styles.css
+++ b/styles.css
@@ -60,12 +60,17 @@ body {
   transition: margin-left .5s;
   position: fixed;
   padding-bottom: 30px;
+  padding-top: 50px;
 }
+
 
 #content {
   transition: margin-left .5s;
-  position: fixed;
-  padding-top: 50px;
+  position: absolute;
+  padding-top: 100px;
+  padding-left: 9%;
+  left: 0;
+  right:0;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@@ -77,6 +82,9 @@ body {
 .topnav {
   overflow: hidden;
   background-color: #333;
+  position: fixed;
+  left:0;
+  right:0;
 }
 
 .topnav a {
